[gd_scene load_steps=5 format=3 uid="uid://jdk6c6id5gv"]

[ext_resource type="Script" uid="uid://b31gvy8j77mdj" path="res://player.gd" id="1_i3pqv"]
[ext_resource type="Shader" uid="uid://divubxgbnblr6" path="res://shaders/target_area.gdshader" id="2_onrkg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i3pqv"]
resource_local_to_scene = true
shader = ExtResource("2_onrkg")
shader_parameter/player_color = Color(1, 1, 1, 1)
shader_parameter/border_thickness = 0.05
shader_parameter/is_observing = false
shader_parameter/resolution = Vector2(1920, 1080)
shader_parameter/color = Color(0.1, 0.4, 0.7, 1)
shader_parameter/zoom = 2.0
shader_parameter/speed = 2.0
shader_parameter/contrast = 20.0
shader_parameter/alpha_threshold = 0.2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
resource_local_to_scene = true

[node name="Player" type="Node2D"]
script = ExtResource("1_i3pqv")
observation_area = Vector2(100, 100)
metadata/_edit_group_ = true

[node name="LightCone" type="Polygon2D" parent="."]

[node name="Target" type="Node2D" parent="."]

[node name="TargetFocus" type="Area2D" parent="Target"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/TargetFocus"]
material = SubResource("ShaderMaterial_i3pqv")
shape = SubResource("RectangleShape2D_hqtel")
debug_color = Color(0, 0.588235, 0.686275, 0.529412)

[node name="InactiveTimeout" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="SensitivityTimer" type="Timer" parent="."]

[connection signal="timeout" from="InactiveTimeout" to="." method="_on_inactive_timeout_timeout"]
[connection signal="timeout" from="SensitivityTimer" to="." method="_on_sensitivity_timer_timeout"]
